# rag-lightweight

./: .gitignore  Cargo.toml  LICENSE  Makefile  Modelfile  README.md  USER_GUIDE.md  build.rs
docs/: SPEC.md
protos/wzd/: common.proto  embedding.proto
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs
src/cli/: embed.rs  ingest.rs  mod.rs  progress.rs  serve.rs  status.rs
src/db/: chunks.rs  documents.rs  filter.rs  hierarchy.rs  mod.rs  schema.rs  search.rs  stats.rs
src/embed/: grpc_adapter.rs  http_adapter.rs  mod.rs  proto.rs  service.rs
src/ingest/: chunker.rs  mod.rs  scanner.rs
src/mcp/: server.rs  tools.rs
src/search/: merge.rs  mod.rs  pipeline.rs  vector_index.rs
