[package]
name = "rag-lightweight"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Lightweight single-binary RAG system with embedded SurrealDB and MCP server"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database (embedded)
surrealdb = { version = "3", features = ["kv-surrealkv"] }

# Web server (MCP transport)
axum = "0.7"

# MCP Protocol
rmcp = { version = "1", features = ["server", "transport-streamable-http-server"] }

# HTTP client (embedding API)
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Hashing
sha2 = "0.10"
subtle = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Chunking
tree-sitter = "0.24"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tiktoken-rs = "0.6"
text-splitter = { version = "0.18", features = ["tiktoken-rs", "markdown"] }

# File type detection
content_inspector = "0.2"

# PDF
pdf-extract = "0.10"

# Async trait
async-trait = "0.1"

# File system walking
walkdir = "2"

# Graceful shutdown
tokio-util = "0.7"

# Config
dotenvy = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
tower = "0.5"
wiremock = "0.6"
